Bug 285332 - Amarok's Amazon MP3 Store Country Select Dialog seems improperly layouted
Summary: Amarok's Amazon MP3 Store Country Select Dialog seems improperly layouted
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Amazon MP3 Store (other bugs)
Version First Reported In: 2.4-GIT
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-30 16:52 UTC by Michael Pyne
Modified: 2011-11-04 21:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.0
Sentry Crash Report:


Attachments
Screenshot of the issue (42.85 KB, image/png)
2011-10-30 16:52 UTC, Michael Pyne
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Pyne 2011-10-30 16:52:57 UTC
Created attachment 65045 [details]
Screenshot of the issue

Version:           2.4-GIT (using Devel) 
OS:                Linux

The Amazon MP3 Store country selection dialog appears to have the main widget improperly layouted. Resizing the dialog does not resize any of the widgets inside. There's a multi-line label which may be causing the infamous Qt+multiline=broken layout bug.

Reproducible: Always

Steps to Reproduce:
In Amarok configuration, click on the configure button for "MP3 Music Store" (the Amazon one) to bring up the affected dialog. Then resize and watch as the layout doesn't change.

Actual Results:  
See above.

Expected Results:  
The widgets should size appropriately with dialog size (e.g. to allow for reading all of that nice multi-line text)

OS: Linux (x86_64) release 3.1.0
Compiler: gcc
Comment 1 Sven Krohlas 2011-11-04 21:25:23 UTC
Git commit 62b47a3d9a2ccf55ad9bd7d7c50b04f7eea425d8 by Sven Krohlas.
Committed on 04/11/2011 at 22:22.
Pushed by krohlas into branch 'master'.

Fix Amazon store config widget layout

You can now freely resize it to read all text.

BUG:285332

M  +91   -80   src/services/amazon/AmazonConfigWidget.ui
M  +1    -3    src/services/amazon/AmazonStore.cpp

http://commits.kde.org/amarok/62b47a3d9a2ccf55ad9bd7d7c50b04f7eea425d8