Fix Amazon store config widget layout

You can now freely resize it to read all text.

BUG:285332